Bug 320899 - blind spot in file managers between file name and file icon
Summary: blind spot in file managers between file name and file icon
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: view-engine: compact mode (other bugs)
Version First Reported In: 16.12.2
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Dolphin Bug Assignee
URL:
Keywords: accessibility, regression, usability
Depends on:
Blocks:
 
Reported: 2013-06-08 13:31 UTC by Teodor
Modified: 2013-06-26 20:10 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.11.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Teodor 2013-06-08 13:31:42 UTC
There is an empty space (1 pixel) between file name and file icon in file managers, clicking on which does nothing.

Reproducible: Always

Steps to Reproduce:
1.find a spot between file name and file icon, you'll see that file highlighting in that plase doesn'n work
2.click
3.
Actual Results:  
nothing happens

Expected Results:  
there should be a normal action with that file

The problem is not only in "detailed view"
Comment 1 Kai Uwe Broulik 2013-06-10 12:07:44 UTC
Could reproduce in Dolphin with compact view mode.
Comment 2 Teodor 2013-06-10 12:23:40 UTC
> The problem is not only in "detailed view"
In 'icons' mode or in 'column' (dont remember exactly) names of files don't match with mouse-hower-highlighting
Comment 3 Emmanuel Pescosta 2013-06-26 20:10:14 UTC
Git commit cab86c292b530ae52c504124e9c77af96cef7f01 by Emmanuel Pescosta.
Committed on 26/06/2013 at 20:07.
Pushed by emmanuelp into branch 'master'.

Remove the space (1 pixel) between the file name and the file
icon in Compact View and Details View mode.
FIXED-IN: 4.11.0
REVIEW: 111244

M  +6    -3    dolphin/src/kitemviews/kstandarditemlistwidget.cpp

http://commits.kde.org/kde-baseapps/cab86c292b530ae52c504124e9c77af96cef7f01